KoraConfigModification added KoraJUnit5Extension config merging support added More tests added, tests reinforced